[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nkapi"
version = "0.2.0"
description = "A lightweight general purpose API framework. Designed to make getting started quick and easy."
keywords = ["nkapi", "kapi", "flask", "django", "api framework"]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
authors = [
    { name = "Nick Kipshidze", email = "kipshidze.nick@gmail.com" }
]
maintainers = [
    { name = "Nick Kipshidze", email = "kipshidze.nick@gmail.com" },
    { name = "George Kandelaki", email = "kandelakig31@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/nickkipshidze/python-nkapi"
Repository = "https://github.com/nickkipshidze/python-nkapi"
Issues = "https://github.com/nickkipshidze/python-nkapi/issues"
